Lots of colors!

--- a/connectedafrica/static/style/style.less
+++ b/connectedafrica/static/style/style.less
@@ -5,7 +5,7 @@
 @import "../vendor/bootstrap/less/mixins.less";
 @import "colors.less";
 
-@theme-color: @col-22;
+@theme-color: #666;
 @border-color: #ddd;
 @banner-height: 30em;
 
@@ -13,6 +13,13 @@
 @brand-primary: @theme-color;
 @nav-tabs-border-color: @border-color;
 @table-border-color: @border-color;
+
+// Schema colors
+@col-Person: @col-2;
+@col-Company: @col-15;
+@col-Organization: @col-20;
+@col-Committee: @col-10;
+@col-PoliticalParty: @col-8;
 
 //////////////////////////////////////////////////////
 @import "bootstrap.less";
@@ -28,6 +35,34 @@ body {
 
 
 //////////////////////////////////////////////////////
+// Schema styles
+
+.fg-Person {
+  color: @col-Person;
+  &:hover { color: darken(@col-Person, 10%); }
+}
+
+.fg-Company {
+  color: @col-Company;
+  &:hover { color: darken(@col-Company, 10%); }
+}
+
+.fg-Organization {
+  color: @col-Organization;
+  &:hover { color: darken(@col-Organization, 10%); }
+}
+
+.fg-Committee {
+  color: @col-Committee;
+  &:hover { color: darken(@col-Committee, 10%); }
+}
+
+.fg-PoliticalParty {
+  color: @col-PoliticalParty;
+  &:hover { color: darken(@col-PoliticalParty, 10%); }
+}
+
+//////////////////////////////////////////////////////
 // General styles
 
 td.num {
@@ -37,6 +72,14 @@ td.num {
 h1, h2, h3, h4, h5 {
   font-weight: 600;
   text-transform: uppercase;
+}
+
+a {
+  text-decoration: underline;
+}
+
+.simple {
+  text-decoration: none; 
 }
 
 h1 { font-size: 2.2em; }
@@ -82,7 +125,9 @@ nav.navbar {
 
   .navbar-brand {
     color: #000;
-    font-weight: 900;
+    font-weight: 600;
+    text-transform: uppercase;
+    .simple;
 
     img {
       width: 1.5em;
@@ -122,6 +167,8 @@ nav.navbar {
 
 #sidebar {
   margin-top: 1em;
+
+  a { .simple; }
 
   .list-group {
     margin-top: 1em;
@@ -278,19 +325,50 @@ h3.section-title {
     fill: none;
     stroke: #ccc;
     stroke-width: 1px;
+    opacity: 0.3;
   }
 
   path.link.selected {
     fill: none;
     stroke: #fff;
     stroke-width: 3px;
+    opacity: 1;
   }
 
   circle {
-    fill: @theme-color;
+    fill: #333;
     stroke: #ccc;
     cursor: pointer;
-    stroke-width: 1px;
+    stroke-width: 3px;
+  }
+
+  .node-Person circle {
+    stroke: @col-Person;
+    fill: darken(@col-Person, 30%);
+  }
+
+  .node-Company circle {
+    stroke: @col-Company;
+    fill: darken(@col-Company, 30%);
+  }
+
+  .node-Organization circle {
+    stroke: @col-Organization;
+    fill: darken(@col-Organization, 30%);
+  }
+
+  .node-Committee circle {
+    stroke: @col-Committee;
+    fill: darken(@col-Committee, 30%);
+  }
+
+  .node-PoliticalParty circle {
+    stroke: @col-PoliticalParty;
+    fill: darken(@col-PoliticalParty, 30%);
+  }
+
+  .inactive circle {
+    opacity: 0.5 !important;
   }
 
   text {
