Caching plus lots of minor changes.

--- a/connectedafrica/static/style/style.less
+++ b/connectedafrica/static/style/style.less
@@ -200,10 +200,16 @@ footer {
   .partners {
     text-align: right;
 
+    a { .simple; }
+
     img {
       width: 60px;
       margin-left: 1em;
       opacity: 0.7;
+    }
+
+    a:hover img {
+      opacity: 1;
     }
   }
 }
