--- a/connectedafrica/templates/profile/base.html
+++ b/connectedafrica/templates/profile/base.html
@@ -35,7 +35,7 @@
     <div class="image-box">&nbsp;</div>
     <div class="graph-box">
       <div class="container">
-        <div id="graph-viz" data-entity-id="{{entity.id}}" data-api-endpoint="{{PROJECT_API}}"></div>
+        <div id="graph-viz" data-entity-id="{{entity.id}}" data-api-endpoint="{{url_for('graph.proxy')}}"></div>
       </div>
     </div>
   </div>
