--- a/connectedafrica/templates/layout.html
+++ b/connectedafrica/templates/layout.html
@@ -36,8 +36,10 @@
           "vendor/jquery/dist/jquery.js",
           "vendor/bootstrap/js/collapse.js",
           "vendor/bootstrap/js/dropdown.js",
+          "vendor/bootstrap/js/tooltip.js",
           "vendor/d3/d3.js",
           "vendor/webcola/WebCola/cola.v3.min.js",
+          "js/app.js",
           "js/graph.js"
       %}
       <script type="text/javascript" src="{{ ASSET_URL }}"></script>
