--- a/connectedafrica/static/style/bootstrap.less
+++ b/connectedafrica/static/style/bootstrap.less
@@ -37,7 +37,7 @@
 
 // Components w/ JavaScript
 // @import "../vendor/bootstrap/less/modals.less";
-// @import "../vendor/bootstrap/less/tooltip.less";
+@import "../vendor/bootstrap/less/tooltip.less";
 // @import "../vendor/bootstrap/less/popovers.less";
 // @import "../vendor/bootstrap/less/carousel.less";
 
