ID logo in footer

--- a/connectedafrica/templates/footer.html
+++ b/connectedafrica/templates/footer.html
@@ -41,6 +41,9 @@
         <a href="http://www.investigativecenters.org/">
           <img src="/static/images/ancir_alpha_dark.png" alt="African Network of Centers for Investigative Reporting">
         </a>
+        <a href="https://investigativedashboard.org/">
+          <img src="/static/images/id_logo.png" alt="Investigative Dashboard">
+        </a>
       </div>
     </div>
   </div>
