Make two version of the web site copy.

--- a/connectedafrica/templates/index.html
+++ b/connectedafrica/templates/index.html
@@ -33,7 +33,7 @@
 
 {% block content %}
   <p class="home-teaser">
-    Siyazana is an isiZulu word that means <strong>we know each other</strong> or <strong>we are connected</strong>. This website has been designed to provide users with a tool to investigate the connections that exist between the private and public spheres in South Africa. Specifically, it provides a unique insight into the financial connectivities that can, and often do, determine how, when, and why money is expended by government. 
+    {{APP_NAME}} provides users with a tool to investigate the connections that exist between the private and public spheres in South Africa. Specifically, it provides a unique insight into the financial connectivities that can, and often do, determine how, when, and why money is expended by government. 
     <a href='{{url_for('base.page', path='about')}}'>Read more...</a>
   </p>
   <div class="row">
