Set a configurable slogan.

--- a/connectedafrica/templates/index.html
+++ b/connectedafrica/templates/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <h1>
         {{APP_NAME}}
-        <small>we know each other</small>
+        <small>{{APP_SLOGAN}}</small>
       </h1>
     </div>
   </div>
