--- a/connectedafrica/templates/layout.html
+++ b/connectedafrica/templates/layout.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}(Untitled){% endblock %} - {{APP_NAME}}</title>
-    <meta name="description" content="{% block description %}{% endblock %}">
+    <meta name="description" content="{% block description %}{{APP_SLOGAN}}{% endblock %}">
     <meta name="keywords" content="{% block keywords %}power, influence, south africa, politics, corruption, connectedafrica, conflicts of interest, illicit ties, pretoria, cape town{% endblock %}">
     <meta name="og:site_name" content="{{APP_NAME}}">
 
