--- a/connectedafrica/templates/profile.html
+++ b/connectedafrica/templates/profile.html
@@ -31,9 +31,12 @@
         <td class="property-value">
           {{property.value}}
           {% if property.source_url %}
-            <a href="{{ property.source_url }}" class="source-ref"
+            <!--a href="{{ property.source_url }}" class="source-ref"
               title="Source: {{ property.source_url | source_readable }}"
-              data-toggle="tooltip" data-placement="right"><i class="fa fa-external-link-square"></i></a>
+              data-toggle="tooltip" data-placement="right"><i class="fa fa-external-link-square"></i></a-->
+            <span class="source-ref"
+              title="Source: {{ property.source_url | source_readable }}"
+              data-toggle="tooltip" data-placement="right"><i class="fa fa-external-link-square"></i></span>
           {% endif %}
         </td>
       </tr>
@@ -79,7 +82,7 @@
           <th>{{v}}</th>
         {% endfor %}
         <th>Dates</th>
-        <th></th>
+        <th>Source</th>
       </tr>
       {% for relation in section.relations %}
         <tr>
@@ -94,9 +97,10 @@
           </td>
           <td width="1%">
             {% if relation | relation_source %}
-              <a href="{{ relation | relation_source }}" class="source-ref"
+              {{ relation | relation_source | source_readable }}
+              <!--a href="{{ relation | relation_source }}" class="source-ref"
                 title="Source: {{ relation | relation_source | source_readable }}"
-                data-toggle="tooltip" data-placement="left"><i class="fa fa-external-link-square"></i></a>
+                data-toggle="tooltip" data-placement="left"><i class="fa fa-external-link-square"></i></a-->
             {% endif %}
           </td>
         </tr>
