--- a/connectedafrica/templates/footer.html
+++ b/connectedafrica/templates/footer.html
@@ -21,27 +21,27 @@
       <div class="col-md-6">
         <p>
           {{APP_NAME}} explores the links between politics, power and money in South Africa. 
-          It is a project of the <a href="http://iss.co.za">Institute
-          for Security Studies</a> and the <a href="http://www.investigativecenters.org/">
+          It is a project of the <a href="http://iss.co.za" target="_blank">Institute
+          for Security Studies</a> and the <a href="https://investigativecenters.org/" target="_blank">
           African Network of Centers for Investigative Reporting</a>, with support
-          from the <a href="http://icfj.org">International Center for Journalists</a>.
+          from the <a href="http://icfj.org" target="_blank">International Center for Journalists</a>.
         </p>
         <p>
           Content licensed under the terms of
-          <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons 4.0 BY</a>
+          <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons 4.0 BY</a>
         </p>
       </div>
       <div class="col-md-6 partners">
-        <a href="http://www.iss.co.za">
+        <a href="http://www.iss.co.za" target="_blank">
           <img src="/static/images/iss_africa_alpha_dark.png" alt="Institute for Security Studies">
         </a>
-        <a href="http://www.icfj.org">
+        <a href="http://www.icfj.org" target="_blank">
           <img src="/static/images/icfj_alpha_dark.png" alt="International Center for Journalists">
         </a>
-        <a href="http://www.investigativecenters.org/">
+        <a href="http://www.investigativecenters.org/" target="_blank">
           <img src="/static/images/ancir_alpha_dark.png" alt="African Network of Centers for Investigative Reporting">
         </a>
-        <a href="https://investigativedashboard.org/">
+        <a href="https://investigativedashboard.org/" target="_blank">
           <img src="/static/images/id_logo.png" alt="Investigative Dashboard">
         </a>
       </div>
