Fix font loading

--- a/connectedafrica/templates/layout.html
+++ b/connectedafrica/templates/layout.html
@@ -14,7 +14,7 @@
       <link type="text/css" href="{{ ASSET_URL }}" rel="stylesheet">
     {% endassets %}
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
 
     <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.png') }}">
   </head>
